--- a/index.html
+++ b/index.html
@@ -7,11 +7,15 @@
     canvas {
         border : 4px solid #fff;
         border-bottom: transparent;
-        background: #000;
+        background: url('./bkg.png') repeat;
         margin: 0 auto;
         display: block;
     }
 
 </style>
 <canvas></canvas>
+
+<img hidden id="sprite" src="./sprite.png" alt="sprite"/>
+<img hidden id="bricks" src="./bricks.png" alt="bricks"/>
+
 <script src="breakout.js"></script>
